[tool.poetry]
name = "example-rag-app"
version = "0.1.0"
description = ""
authors = ["taiberium <akhmetovrustam1990@gmail.com>"]
readme = "README.md"
packages = [{include = "example_rag_app"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
gpt4all = "^2.8.2"
chromadb = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
